# py-youwol

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  deps_manager.sh  dev-requirements.txt  docker-requirements.txt  publish-requirements.txt  pyproject.toml  qa-requirements.txt  requirements-dev.txt  requirements-docker.txt  requirements-no-hashes.txt  requirements-publish.txt  requirements-qa.txt  requirements.txt  setup.cfg  setup.py  version_management.py
.github/: CODEOWNERS
.github/workflows/: branch_release.yml  check_all_oses.yml  docker-image.yml  nightly.yml  pull_request_checks.yml  release.yml  subdir_typescript.yml
.typing_stubs/: brotli.pyi
.typing_stubs/aiostream/: __init__.pyi  aiter_utils.pyi  core.pyi  manager.pyi  pipe.pyi  test_utils.pyi
.typing_stubs/async_exit_stack/: __init__.pyi  _async_exit_stack.pyi
.typing_stubs/cowpy/: cow.pyi
.typing_stubs/daemon/: _metadata.pyi  daemon.pyi  pidfile.pyi  runner.pyi
.typing_stubs/deepdiff/: __init__.pyi  anyset.pyi  base.pyi  commands.pyi  deephash.pyi  delta.pyi  diff.pyi  distance.pyi  helper.pyi  lfucache.pyi  model.pyi  operator.pyi  path.pyi  search.pyi  serialization.pyi
.typing_stubs/lockfile/: __init__.pyi  linklockfile.pyi  mkdirlockfile.pyi  pidlockfile.pyi  sqlitelockfile.pyi  symlinklockfile.pyi
.typing_stubs/minio/: __init__.pyi  api.pyi  commonconfig.pyi  datatypes.pyi  deleteobjects.pyi  error.pyi  helpers.pyi  legalhold.pyi  lifecycleconfig.pyi  minioadmin.pyi  notificationconfig.pyi  objectlockconfig.pyi  replicationconfig.pyi  retention.pyi  select.pyi  signer.pyi  sse.pyi  sseconfig.pyi  tagging.pyi  time.pyi  versioningconfig.pyi  xml.pyi
.typing_stubs/semantic_version/: __init__.pyi  base.pyi  django_fields.pyi
.typing_stubs/watchdog/: events.pyi  version.pyi  watchmedo.pyi
doc/: README.md  package.json  rx-vdom-config.ts  template.py  typedoc.js
doc/.yw_pipeline/: yw_pipeline.py
doc/assets/: CHANGELOG.md  gallery.md  how-to.install-youwol.md  how-to.md  how-to.start-youwol.md  index.md  references.developers.md  tutorials.dynamic-dependencies.md  tutorials.md  tutorials.publish-raw-app.md
doc/front-app/: .gitignore  package.json  rx-vdom-config.ts  template.py  webpack.config.ts
doc/src/: auto-generated-toml.ts  auto-generated.ts
images/: Dockerfile  entry_point.sh
images/backends/: Dockerfile
images/webpm/: Dockerfile  default-logging.yaml
integrations/: .gitignore  canary.txt  consistency_testing.py  yw_config.py
lib/yw_clients/: pyproject.toml
lib/yw_clients/.yw_pipeline/: yw_pipeline.py
lib/yw_clients/tests/: test_assets.py  test_cdn_sessions_storage.py  test_explorer.py  test_files.py  test_webpm.py
lib/yw_clients/tests/test-data/: .gitignore
lib/yw_clients/yw_clients/: __init__.py
lib/yw_clients/yw_clients/common/: __init__.py  headers.py  json_utils.py
lib/yw_clients/yw_clients/context/: __init__.py  context.py  models.py  reporter.py
lib/yw_clients/yw_clients/http/: __init__.py  aiohttp_utils.py  exceptions.py  request_executor.py
lib/yw_clients/yw_clients/http/assets/: __init__.py  assets.py  models.py
lib/yw_clients/yw_clients/http/assets_gateway/: __init__.py  assets_gateway.py  models.py
lib/yw_clients/yw_clients/http/cdn/: __init__.py  cdn.py
lib/yw_clients/yw_clients/http/cdn_sessions_storage/: cdn_sessions_storage.py
lib/yw_clients/yw_clients/http/explorer/: __init__.py  explorer.py  explorer_utils.py  models.py
lib/yw_clients/yw_clients/http/files/: __init__.py  files.py  models.py
lib/yw_clients/yw_clients/http/webpm/: __init__.py  models.py  webpm.py
publish/: README.md
requirements/: base.in  dev.in
src/youwol/: __init__.py
synchronization/: assets.py  cdn.py  data.py  services.py  synchronize.py  utils.py
test_install/: README.md
tooling/publish/: requirements.txt
tooling/synchronization/: services.py  synchronize.py
youwol/: asset_auto_download.py  configurations.py  context.py  errors.py  exceptions.py  fastapi_app.py  main.py  main_args.py  models.py  shut_down.py  start.py  utils_low_level.py  utils_misc.py  utils_paths.py  web_socket.py
youwol/auto_download/: auto_download_thread.py  common.py  data.py  flux_project.py  package.py
youwol/configuration/: __init__.py  clients.py  config_from_module.py  config_from_static_file.py  configuration_handler.py  configuration_validation.py  defaults.py  models_back.py  models_base.py  models_config.py  models_config_middleware.py  models_config_module.py  models_config_parse.py  models_dispatch.py  (+10 more)
youwol_accounts/: configuration.py  impersonation_paths.py  openid_rp_paths.py  registration.py  root_paths.py  router.py
youwol_accounts_backend/: __init__.py  configuration.py  impersonation_paths.py  openid_rp_paths.py  registration.py  root_paths.py  router.py
youwol_assets_backend/: __init__.py  configurations.py  root_paths.py  router.py  utils.py
youwol_assets_gateway/: __init__.py  all_icons_emojipedia.py  configurations.py  root_paths.py  router.py  utils.py
youwol_cdn_apps_server/: __init__.py  configurations.py  root_paths.py  router.py
youwol_cdn_backend/: __init__.py  configurations.py  loading_graph_implementation.py  resources_initialization.py  root_paths.py  router.py  utils.py  utils_indexing.py
youwol_cdn_sessions_storage/: configurations.py  root_paths.py  router.py  utils.py
youwol_data/: config.py  remotes-info.json  yw_config.py
youwol_files_backend/: configurations.py  root_paths.py  router.py
youwol_flux_backend/: __init__.py  backward_compatibility.py  configurations.py  root_paths.py  router.py  utils.py  workflow_new_project.py
youwol_mock_backend/: __init__.py  configuration.py  models.py  root_paths.py  router.py
youwol_stories_backend/: __init__.py  configurations.py  root_paths.py  router.py  utils.py
youwol_tree_db_backend/: __init__.py  configurations.py  root_paths.py  router.py  utils.py
youwol_utils/: __init__.py  context.py  exceptions.py  request_info_factory.py  session_handler.py  types.py  utils.py  utils_helm.py  utils_paths.py  utils_requests.py  utils_shell.py  utils_test.py
(+1190 files in other folders)
