[project]
name = "yw_clients"
dynamic = ["version"]
authors = [
    { name = "G. Reinisch", email = "greinisch@youwol.com" },
    { name = "J. Decharne", email = "jdecharne@youwol.com" },
]
description = "Client librarie for YouWol"
readme = "README.md"
requires-python = "~=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.1,<4.0.0",
    "fastapi>=0.109.1,<0.110.0",
    "pydantic<2.0.0"
]

[build-system]
requires = [
    "setuptools>=67.7.2",
]
[tool.setuptools.dynamic]
version = {attr = "yw_clients.__version__"}
